--- a/ProgrammingHero/HTML/01HTML.html
+++ b/ProgrammingHero/HTML/01HTML.html
@@ -3,9 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>First Blog</title>
+  <link rel="stylesheet" href="/CSS/boge.css">
 </head>
+
 <body>
-  
+    <div>
+      <h3>MY First Bolog</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, voluptatum.</p>
+    </div>
+    <div>
+      <h3>MY First Bolog</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, voluptatum.</p>
+    </div>
 </body>
 </html>
