--- a/ProgrammingHero/HTML/01HTML.html
+++ b/ProgrammingHero/HTML/01HTML.html
@@ -16,5 +16,9 @@
       <h3>MY First Bolog</h3>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, voluptatum.</p>
     </div>
+    <div>
+      <h3>MY First Bolog</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, voluptatum.</p>
+    </div>
 </body>
 </html>
